package protos;

message VoteRequest {
    required uint64 term = 1;
    required string candidateId = 2;
    required uint64 lastLogTerm = 3;
    required uint64 lastLogIndex = 4;
}

message VoteReply {
    required bool granted = 1;
    required uint64 term = 2;
}

message AppendRequest {
    required uint64 term = 1;
    required string leaderId = 2;
    required uint64 prevLogTerm = 3;
    required uint64 prevLogIndex = 4;
    required uint64 commitIndex = 5;
    repeated Log logs = 6;
}

message AppendReply {
    required bool success = 1;
    required uint64 term = 2;
}

message Log {
    required uint64 term = 1;
    required uint64 logId = 2;
}

service RaftServer {

    // Vote request
    rpc Vote(VoteRequest) returns (VoteReply) {}

    // Append request
    rpc Append(AppendRequest) returns (AppendReply) {}
}